--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,7 @@
         "emitDecoratorMetadata": true,
         "noEmitHelpers": true,
         "noEmitOnError": true,
-        "lib": [
-            "es6",
-            "dom",
-            "es2015.iterable"
-        ],
+        "lib": ["es2017", "dom"],
         "baseUrl": ".",
         "paths": {
             "*": [
