--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "org.nativescript.conFusion",
-    "tns-android": {
-      "version": "3.3.1"
-    },
     "tns-ios": {
       "version": "3.3.0"
+    },
+    "tns-android": {
+      "version": "3.3.1"
     }
   },
   "dependencies": {
@@ -26,10 +26,12 @@
     "nativescript-camera": "^3.2.1",
     "nativescript-couchbase": "^1.0.18",
     "nativescript-email": "^1.5.1",
+    "nativescript-imagepicker": "^4.0.1",
     "nativescript-local-notifications": "^2.0.1",
     "nativescript-ngx-fonticon": "^4.0.0",
+    "nativescript-phone": "^1.3.1",
+    "nativescript-pro-ui": "^3.2.0",
     "nativescript-social-share": "^1.5.0",
-    "nativescript-telerik-ui": "^3.1.4",
     "nativescript-theme-core": "~1.0.2",
     "nativescript-toasty": "^1.1.5",
     "reflect-metadata": "~0.1.8",
